--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-htmlacademy": "^5.0.0"
+    "eslint-config-htmlacademy": "^5.0.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
